--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "expo": "~50.0.2",
     "expo-status-bar": "~1.11.1",
+    "google-translate-api": "^2.3.0",
     "react": "18.2.0",
-    "react-native": "0.73.2"
+    "react-native": "0.73.2",
+    "react-native-dotenv": "^3.4.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "metro-react-native-babel-preset": "^0.77.0"
   },
   "private": true
 }
